find by code added
