# src/main/route/prospect_route.js
@@ -8,6 +8,13 @@ prospectRoutes.route('/')
 prospectRoutes.route('/:ProspectId')
     .put(controller.addProspect);
 
+prospectRoutes.route('/find')
+    .post(controller.findProspect);
+
+prospectRoutes.route('/:ProspectId')
+    .get(controller.findProspectById);
+
+
 
 // exporting modules, to be used in the other .js files
 module.exports = { prospectRoutes }
